# spm-control

./: .gitignore  README.md  pyproject.toml
config_files/: hardware.yaml  scan.yaml
legacy_scripts/: normed g2 T2 plotter.py  run_scan_5.py  scan_detect_ttr.py
spm_control/: config.py
spm_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spm_control/gui/: app.py
spm_control/gui/modes/: config.py  helpers.py  page_helpers.py  raster_scan.py  validators.py
spm_control/legacy_scripts/: 2024-04-18 scan_plotter.py  dbgt2.py  find_focus.py  find_focus_functions.py  live_plotting_test.py  run_multiscan3.py  run_t2.py  tttrmode.py
spm_control/work_in_progress_legacy_scripts/: run_scan_5.py
test_env/: dbgt2.py  run_t2.py
tests/: run_scan_request  test_scan_config.py  test_side_by_side
work_in_progress_legacy_scripts/: find_focus_functions.py  hydraharp_intensities_2.py  read_tttr.py  run_scan_5.py
